refactor: also remove JVM option 'MaxPermSize' in the upgrade